--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -70,11 +70,16 @@ img {
     max-width: 100%;
     height: auto;
 }
+.main-img img {
+    width: auto;
+    height: auto;
+}
 
 p {
     margin: 0 0 26px;
     line-height: 1.8;
 }
+
 
 h1,
 h2,
